--- a/Online_Education/CSS/style.css
+++ b/Online_Education/CSS/style.css
@@ -262,10 +262,264 @@ header .fa-bars {
     opacity: .8; 
 }
 
+.teacher {
+    background-color: #f9f9f9;
+}
+
+.teacher .card-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    padding: 2rem 0;
+}
+
+.teacher .card-container .card {
+    padding: 2rem;
+    margin: 2rem;
+    background-color: #fff;
+    text-align: center;
+    width: 28rem;
+    box-shadow: 0 .3rem .5rem rgba(0, 0, 0, .3);
+}
+
+.teacher .card-container .card img {
+    height: 30rem;
+    width: 100%;
+    object-fit: cover;
+    filter: grayscale();
+    transition: .2s;
+}
+
+.teacher .card-container .card:hover img {
+    filter: grayscale(0);
+}
+.teacher .card-container .card h3 {
+    color: var(--pink);
+    font-size: 2rem;
+    padding: .5rem 0;
+}
+
+.teacher .card-container .card p {
+    font-size: 1.7rem;
+    color: #666; 
+}
+
+.teacher .card-container .card .icons a {
+    font-size: 1.9rem;
+    padding: 1.5rem .5rem;
+    color: var(--pink);
+}
+
+.teacher .card-container .card .icons a:hover {
+    color: var(--violet);
+}
+
+.course .box-container {
+    width: 85%;
+    display: flex;
+    justify-content: center;
+    margin: 0 auto;
+    padding: 4rem;
+    flex-wrap: wrap;
+}
+
+.course .box-container .box {
+    height: 18rem;
+    width: 25rem;
+    margin: 3.5rem 2rem;
+    border-radius: 1rem;
+    text-align: center;
+    box-shadow: .3rem .3rem 0 .1rem var(--violet),
+                .5rem .5rem .5rem rgba(0, 0, 0, .3);
+}
+
+.course .box-container .box i {
+    height: 10rem;
+    width: 10rem;
+    line-height: 8rem;
+    text-align: center;
+    color: #fff;
+    border-radius: 50%;
+    background: var(--pink);
+    margin-top: -4rem;
+    border: 1rem solid #fff;
+    border-left: 1rem solid var(--pink);
+    border-right: 1rem solid var(--pink);
+    box-shadow: 0 0 0 1rem #fff inset;
+    font-size: 3.5rem;
+}   
+
+.course .box-container .box h3 {
+    font-size: 2rem;
+    color: var(--violet);
+}
+
+.course .box-container .box p {
+    font-size: 1.5rem;
+    color: #999;
+    padding: 1rem 0;
+}
+
+.review {
+    background: #f9f9f9;
+}
+
+.review .box-container {
+    display: flex;
+    justify-content: center;
+    padding: 4rem;
+    flex-wrap: wrap;
+}
+
+.review .box-container .box {
+    width: 28rem;
+    padding-bottom: 1rem;
+    text-align: center;
+    box-shadow: 0 .3rem .5rem rgba(0, 0, 0, .3);
+    background: #fff;
+    margin: 4rem 2rem
+}
+
+.review .box-container .box img{
+    height: 8.5rem;
+    width: 8.5rem;
+    object-fit: cover;
+    border-radius: 50%;
+    margin-top: -4rem;
+    border: .6rem solid var(--pink);
+    border-left: .6rem solid var(--violet);
+    border-bottom: .6rem solid var(--violet);
+}
+
+.review .box-container .box h3 {
+    font-size: 2rem;
+    color: var(--pink);
+    padding: 0 .5rem;
+}
+
+.review .box-container .box p {
+    font-size: 1.4rem;
+    color: #999;
+    padding: 0 1.3rem;
+}
+
+.review .box-container .box .stars i {
+    font-size: 1.6rem;
+    color: var(--violet);
+    padding: 1.3rem .1rem;
+}
+
+.contact {
+    background: #333;
+}
+
+.contact .row {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 5rem 0;
+}
+
+.contact .row .image img {
+    width: 50vw;
+    height:70vh;
+}
+
+.contact .row .form-container {
+    width: 50%;
+    padding-right: 6rem;
+}
+
+.contact .row .form-container input,textarea {
+  height: 4rem;
+  width: 100%;
+  background: #fff;
+  border: none;
+  border-radius: 5rem;
+  padding: 0 1rem;
+  margin: 1rem 0;
+  color: var(--pink);
+  font-size: 1.6rem;
+  transition: .2s linear;
+}
+
+.contact .row .form-container input:focus , textarea:focus {
+    border: .2rem solid var(--pink);
+}
+
+.contact .row .form-container textarea {
+    height: 20rem;
+    border-radius: 1rem;
+    padding: 1rem;
+    resize: none;
+}
+
+.contact .row .form-container input[type="submit"] {
+    width: 17rem;
+    background: var(--pink);
+    color: #fff;
+    cursor: pointer;
+    font-size: 2rem;
+    transition: .2s;
+}
+
+.contact .row .form-container input[type="submit"]:hover {
+    background: none;
+    color: var(--pink);
+    border: .2rem solid var(--pink);
+}
+
+.footer {
+    text-align: center;
+}
+
+.footer .icons {
+    padding: 3rem 0;
+}
+
+.footer .icons a {
+    height: 4.5rem;
+    width: 4.5rem;
+    line-height: 4.2rem;
+    text-align: center;
+    border-radius: 50%;
+    color: var(--violet);
+    border: .2rem solid var(--violet);
+    font-size: 2rem;
+    margin: 0 .1rem;
+    transition: .2s linear;
+}
+
+.footer .icons a:hover {
+    color: #fff;
+    background: var(--violet);
+    border-color: var(--pink);
+}
+
+.footer .credit {
+    font-size: 2rem;
+    border-top: .1rem solid #999;
+    margin: 0 auto;
+    margin-bottom: 2rem;
+    color: #666;
+    width: 90%;
+    padding: 1rem 0;
+}
+
+.footer .credit span {
+    color: var(--pink);
+}
+
+
+
+
+
+
 
 header .fa-times {
-    transform: rotate(-180deg);
-    color: var(--violet);
+    transform: rotate(180deg);
+    color: var(--violet); 
 }
 
 
@@ -331,4 +585,19 @@ header .fa-times {
         padding: 0 2.5rem;
     }
 
+    .course .box-container {
+        width: 100%;
+    }
+
+    .contact .row {
+        flex-flow: column;
+    }
+    .contact .row .image img {
+        height: 50vh;
+        width: 90vw;
+    }
+    .contact .row .form-container {
+        width: 90%;
+        padding: 0;
+    }
 }
