--- a/Tours & Travel/CSS/style.css
+++ b/Tours & Travel/CSS/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;1,300;1,400&display=swap');
 
 * {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Kalam', cursive;
     padding: 0; margin: 0;
     box-sizing: border-box;
     text-decoration: none;
@@ -9,7 +9,7 @@
 }
 
 html {
-    overflow-x:  hidden;
+    overflow-x: hidden;
     font-size: 62.5%;
 }
 
@@ -23,10 +23,17 @@ header {
     top: 1.5rem; left: 50%;
     transform: translateX(-50%);
     border-radius: .5rem;
-    box-shadow: 0 .3rem .5rem rgba(0, 0, 0, .3);
+    box-shadow: 0 .3rem .5rem rgba(0,0,0,.3);
     padding: .3rem 2rem;
     transition: .2s linear;
 }
+
+.header-active {
+    top: 0;
+    width: 100%;
+    border-radius: 0;
+}
+
 header .logo {
     color: #333;
     font-size: 3rem;
@@ -41,7 +48,8 @@ header .navbar ul {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 0; margin: 0;
+    margin: 0;
+    padding: 0;
 }
 
 header .navbar ul li {
@@ -66,9 +74,118 @@ header .fa-bars {
     display: none;
 }
 
-/* media queries */
+.home {
+    min-height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    position: relative;
+    padding: 2rem 10rem;
+ }
 
+.home .video video{
+    position: absolute;
+    top: 0; left: 0;
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+    z-index: -1;
+}
+
+.home .content {
+    margin-top: 7rem;
+}
+
+.home .content h1 {
+    font-size: 6.1vw;
+    color: #fff;
+    text-shadow: 0 .3rem .5rem #000;
+}
+
+.home .content p {
+    font-size: 1.5vw;
+    color: #eee;
+    text-shadow: 0 .3rem .5rem #000;
+    padding-left: 2rem;
+    border-left: .3rem solid #ddd;
+}
+
+.home .form-container form {
+    margin-top: 8rem;
+    padding: 2rem;
+    width: 40rem;
+    background-color: #fff;
+    box-shadow: 0 .3rem .5rem rgba(0,0,0,.9);
+    border-radius: .5rem;
+}
+
+.home .form-container form h3 {
+    color: #333;
+    font-size: 3rem;
+    text-align: center;
+}
+
+.home .form-container form span {
+    color: #0098a1;
+    font-size: 2.5rem;
+    margin: .5rem 0;
+    display: block;
+}
+
+.home .form-container form input {
+    width: 100%;
+    padding: 0 1rem;
+    height: 4rem;
+    font-size: 1.5rem;
+    background: #eee;
+    border: none;
+    outline: none;
+    color: #333;
+    box-shadow: 0 .1rem .3rem rgba(0,0,0,.3) inset;
+    border-radius: .5rem;
+
+}
+
+.home .form-container form input[type ="submit"] {
+    width: 10rem;
+    color: #fff;
+    background-color: #0098a1;
+    cursor: pointer;
+    font-size: 2rem;
+    margin-top: 2rem;
+    transition: .2s linear;
+}
+
+.home .form-container form input[type ="submit"]:hover {
+    border: .2rem solid #0098a1;
+    color: #0098a1;
+    background: none;
+}
+/* Media Queries*/
+@media (max-width:991px) {
+ 
+    .home {
+        flex-flow: column;
+        padding: 1.5rem;
+    }
+
+    .home .content {
+        text-align: center;
+    }
+
+    .home .content h1 { 
+        font-size: 5.5rem;
+    }
+
+    .home .content p {
+        font-size: 1.8rem;
+        padding: 0;
+        border: none;
+    }
+
+}
 @media (max-width:768px) {
+
     html {
         font-size: 55%;
     }
@@ -84,29 +201,45 @@ header .fa-bars {
         width: 100%;
         background-color: #fff;
         border-radius: .5rem;
-        box-shadow: 0 .3rem .5rem rgba(0, 0, 0, .3);
+        box-shadow: 0 .3rem .5rem rgba(0,0,0,.3);
         z-index: 1000;
         transition: .2s linear;
         opacity: 0;
     }
 
     header .navbar ul {
-        flex-flow: column ;
+        flex-flow: column;
     }
 
     header .navbar ul li {
         margin: 1rem 0;
         width: 100%;
-        text-align: center; 
+        text-align: center;
     }
-    
+
     header .navbar ul li a {
         display: block;
         font-size: 3rem;
     }
 
     header .nav-toggle {
-        top: 5rem;
+        top: 6rem;
         opacity: 1;
+    }
+}
+
+@media (max-width:500px) {
+
+    .home .form-container {
+        width: 100%;
+    }
+ 
+    .home .form-container form {
+        width: 100%;
+        margin: 3rem 0;
+    }
+    
+    .home .form-container form input[type ="submit"] {
+        width: 100%;
     }
 }
