--- a/Tours & Travel/CSS/style.css
+++ b/Tours & Travel/CSS/style.css
@@ -13,6 +13,18 @@ html {
     font-size: 62.5%;
 }
 
+.heading {
+    color: #333;
+    font-size: 3.5rem;
+    padding: 1rem;
+    padding-top: 6rem;
+    text-align: center;
+    letter-spacing: .2rem;
+}
+
+.heading span {
+    color: #0098a1;
+}
 header {
     width: 96%;
     background: #fff;
@@ -161,6 +173,404 @@ header .fa-bars {
     color: #0098a1;
     background: none;
 }
+
+.feature {
+    min-height: 100vh;
+    background: #f9f9f9;
+}
+
+.feature .card-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    width: 100%;
+}
+.feature .card-container .card {
+    width: 30rem;
+    margin: 2rem;
+    background-color: #fff;
+    border-radius: .5rem;
+    box-shadow: 0 .3rem .5rem rgba(0,0,0,.3);
+    overflow: hidden;
+    position: relative;
+}
+
+.feature .card-container .card img {
+    height: 25rem;
+    width: 100%;
+    object-fit: cover;
+}
+
+.feature .card-container .content {
+    padding-bottom: 2rem;
+    text-align: center;
+}
+
+.feature .card-container .content .title {
+    color: #0098a1;
+    font-size: 3rem;
+}
+
+.feature .card-container .content p {
+    color: #333;
+    font-size: 1.4rem;
+    padding: 1rem;
+}
+
+.feature .card-container .content .stars i {
+    padding: 0 .2rem;
+    font-size: 2rem;
+    color: gold;
+}
+
+.feature .card-container .content .btn {
+    font-size: 1.7rem;
+    margin-top: 1.4rem;
+    height: 3.5rem;
+    width: 12rem;
+    border-radius: .5rem;
+    outline: none;
+    border: none;
+    background: #0098a1;
+    color: #fff;
+    cursor: pointer;
+    transition: .2s linear;
+}
+
+.feature .card-container .content .btn:hover {
+    background: none;
+    border: .2rem solid #0098a1;
+    color: #0098a1; 
+}
+
+.feature .card-container .card .discount {
+    position: absolute;
+    top: 1rem; left: 1rem;
+    display: block;
+    height: 3.5rem;
+    width: 6rem;
+    background: #ff3300;
+    color: #fff;
+    line-height: 3rem;
+    text-align: center;
+    font-size: 2rem;
+}
+
+.about {
+    min-height: 100vh;
+}
+
+.about .row {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    width: 90%;
+    margin: 0 auto;
+}
+
+.about .row .image img {
+    height: 65vh;
+    width: 50vw;
+}
+
+.about .row .content h3 {
+    font-size: 4rem;
+    color: #0098a1;
+}
+
+.about .row .content p {
+    font-size: 1.9rem;
+    color: #333;
+}
+
+.about .row .content .btn {
+    outline: none;
+    border: none;
+    cursor: pointer;
+    transition: .2s linear;
+    height: 4rem;
+    width: 18rem;
+    margin-top: 1rem;
+    color: #fff;
+    background: #0098a1;
+    font-size: 2rem;
+}
+.about .row .content .btn1, 
+.about .row .content .btn:hover {
+    background: none;
+    color: #0098a1;
+    border: .2rem solid #0098a1;
+    margin-right: 1rem;
+}
+
+.gallery {
+    min-height: 100vh;
+}
+
+.gallery .box-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    width: 90%;
+    margin: 0 auto;
+}
+
+.gallery .box-container .box {
+    height: 20rem;
+    width: 30rem;
+    margin: 2rem;
+    cursor: pointer;
+    overflow: hidden;
+    position: relative;
+}
+
+.gallery .box-container .box img {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+}
+
+.gallery .box-container .box .icons {
+    position: absolute;
+    top: 120%; left: 0;
+    background: linear-gradient(transparent, #333);
+    display: flex;
+    align-items: flex-end;
+    justify-content: space-around;
+    height: 100%;
+    width: 100%;
+    opacity: 0;
+    transition: .2s linear;
+}
+
+.gallery .box-container .box:hover .icons {
+    opacity: 1;
+    top: 0;
+}
+.gallery .box-container .box .icons a {
+    color: #fff;
+    text-shadow: 0 .1rem .3rem #000;
+    font-size: 3rem;
+    padding-bottom: 2rem;
+}
+
+.gallery .box-container .box .icons a:hover {
+    color: #0098a1;
+}    
+
+.review {
+    background-color: #0098a1;
+}
+.review .heading {
+    color: #fff;
+    padding-bottom: 4rem;
+}
+.review .heading span {
+    color: gold;
+}
+
+.review .box-container {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+.review .box-container .box {
+    width: 35rem;
+    margin: 4rem 2rem;
+    padding-bottom: 2rem;
+    text-align: center;
+    box-shadow: 0 .3rem .5rem #000;
+    background: #fff;
+}
+
+.review .box-container .box .image {
+    margin-top: -5rem;
+}
+.review .box-container .box .image img {
+    height: 10rem;
+    width: 10rem;
+    border-radius: 50%;
+    object-fit: cover;
+    border: .7rem solid #fff;
+}
+
+.review .box-container .box .content h3 {
+    font-size: 2rem;
+    color: #0098a1;
+}
+
+.review .box-container .box .content p {
+    font-size: 1.4rem;
+    color: #333;
+    padding: .5rem 1.5rem;
+}
+
+.review .box-container .box .content .stars i {
+    color: gold;
+    font-size: 1.7rem;
+    padding: 1rem .1rem;
+}   
+
+.contact .row {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.contact .row .contact-info .box {
+    margin: 4rem 2rem;
+}
+
+.contact .row .contact-info .box h3 {
+    font-size: 2rem;
+    color: #333;
+}
+
+.contact .row .contact-info .box h3 i {
+    color: #0098a1;
+}
+
+.contact .row .contact-info .box p {
+    padding-left: 3rem;
+    font-size: 1.7rem;
+    color: #aaa;
+}
+
+.contact .row .contact-form-container {
+    width: 50%;
+}
+
+.contact .row .contact-form-container h3{
+    font-size: 4rem;
+    padding-top: 4rem;
+    color: #0098a1;
+}
+
+.contact .row .contact-form-container form input,textarea {
+    outline: none;
+    border: .2rem solid #0098a1;
+    height: 4rem;
+    width: 100%;
+    background: #fff;
+    padding: 0 1rem;
+    margin: 1rem 0;
+    font-size: 1.8rem;
+    width: 49%;
+}
+
+.contact .row .contact-form-container form textarea {
+     width: 100%;
+     padding: 1rem;
+     resize: none;
+     height: 20%;
+}
+
+.contact .row .contact-form-container  form input[type="submit"] {
+    color: #0098a1;
+    border: .2rem solid #0098a1;
+    cursor: pointer;
+    transition: .2s;
+    width: 20rem;
+}
+
+.contact .row .contact-form-container  form input[type="submit"]:hover {
+    background: #0098a1;
+    color: #fff;
+}
+
+.newsletter {
+    padding: 2rem;
+    background:rgb(0, 0, 0);
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+    text-align: center;
+}
+
+.newsletter h1 {
+    font-size: 5rem;
+    color: #fff;
+    text-shadow: 0 .3rem .5rem #000;
+}
+
+.newsletter p {
+    font-size: 2rem;
+    color: #eee;
+    padding: 1rem 15rem;
+}
+
+.newsletter form input {
+    outline: none;
+    border: none;
+    height: 5rem;
+}
+
+.newsletter form input[type="email"] {
+    width: 40rem;
+    padding: 0 1rem;
+    color: #fff;
+    background: rgba(255, 255, 255, .2);
+    font-size: 2rem;
+}
+
+.newsletter form input[type="email"]::placeholder {
+    color: #ccc;
+}
+
+.newsletter form input[type="submit"] {
+    width: 20rem;
+    color: #fff;
+    background: #0098a1;
+    font-size: 2rem;
+    cursor: pointer;
+    margin-left: -1.1rem;
+    transition: .2s;
+}
+
+.newsletter form input[type="submit"]:hover {
+    border: 2.rem solid #fff;
+    color: #fff;
+    background: none;
+}
+
+.footer {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 2rem;
+    background: #222;
+}
+
+.footer .credit {
+    font-size: 2rem;
+    color: #eee;
+}
+
+.footer .credit span {
+     color: #0098a1;
+}
+
+.footer .icons a {
+    font-size: 2rem;
+    margin: 0 .5rem;
+    height: 4rem;
+    width: 4rem;
+    line-height: 3.5rem;
+    text-align: center;
+    border-radius: 50%;
+    color: #fff;
+    border: .2rem solid #fff;
+    transition: .2s linear;
+} 
+
+.footer .icons a:hover {
+    background: #0098a1;
+}
+
+
+
 /* Media Queries*/
 @media (max-width:991px) {
  
@@ -226,6 +636,49 @@ header .fa-bars {
         top: 6rem;
         opacity: 1;
     }
+
+    .about .row {
+        flex-flow: column;
+    }
+
+    .about .row .image img {
+        width: 90vw;
+    }
+    .about .row .content {
+        text-align: center;
+    }
+    
+    .about .row .btn {
+    margin-right: 0;
+    }
+
+    .contact .row {
+        flex-flow: column;
+        align-items: flex-start;
+    }  
+
+    .contact .row .contact-form-container {
+        width: 90%;
+        margin: 0 auto;
+    }
+
+    .newsletter p {
+        padding: 1rem 0;
+    }
+
+    .newsletter form input[type="email"] {
+        width: 100%;
+        margin-bottom: 1rem;
+    }
+
+    .footer {
+        flex-flow: column;
+    }
+    
+    .footer .credit {
+        text-align: center;
+        padding-bottom: 3rem;
+    }
 }
 
 @media (max-width:500px) {
@@ -240,6 +693,14 @@ header .fa-bars {
     }
     
     .home .form-container form input[type ="submit"] {
+        width: 100%;
+    }
+    .contact .row .contact-form-container form input {
+        margin: 1rem 0;
+        width: 100%;
+    }
+
+    .contact .row .contact-form-container form input[type="submit"] {
         width: 100%;
     }
 }
